--- a/documentation/instrument-editor/index.html
+++ b/documentation/instrument-editor/index.html
@@ -34,7 +34,10 @@
                 <h1 class="topic">Instrument Editor</h1>
                 <hr />
                 <br />
-                <p>The instrument editor is where</p>
+                <p>
+                    The instrument editor is where you can create custom presets that define how a sound behaves. You
+                    can then reuse this preset as many times as you like in your song.
+                </p>
                 <br />
                 <h2>Wave and Sample Instruments</h2>
                 <p>
