--- a/documentation/pattern-editor/index.html
+++ b/documentation/pattern-editor/index.html
@@ -104,7 +104,9 @@
                         <span style="font-weight: bold">Effects Column</span>
                         <br />
                         Sets channel effects. The format is Yxx, where Y is the effect type and xx is the parameter.
-                        Note that effects will stay on until you turn them off, to avoid cluttering up the column.
+                        Note that effects will stay on until you turn them off, to avoid cluttering up the column.<br />
+                        If you need more than one effect column on the channel, you can click the arrow next to the
+                        channel name to add up to three more effect columns.
                         <br />
                         See
                         <a href="effect-list/">the full list of effects</a>
