--- a/documentation/preferences/index.html
+++ b/documentation/preferences/index.html
@@ -377,7 +377,10 @@
                     </tr>
                     <tr>
                         <td style="padding-left: 20px">Draw in maximum resolution</td>
-                        <td>Draws the visualizer directly to the back buffer for higher resolution</td>
+                        <td>
+                            Draws the visualizer directly to the back buffer for higher resolution, ignoring the UI
+                            pixel scaling.
+                        </td>
                     </tr>
                 </table>
 
