--- a/documentation/visualizer-mode/index.html
+++ b/documentation/visualizer-mode/index.html
@@ -72,7 +72,7 @@
                 </p>
                 <ul>
                     <li>
-                        The brightness of the wave is determined by the brightness of the wave's sound, sines and
+                        The saturation of the wave is determined by the brightness of the wave's sound, sines and
                         triangles will appear close to white.
                     </li>
                     <li>
