--- a/documentation/wave-bank/index.html
+++ b/documentation/wave-bank/index.html
@@ -185,8 +185,8 @@
                     <tr>
                         <td>Harsh</td>
                         <td>
-                            No interpolation, uses nearest neighbor resampling. This gives a very bright and digital
-                            sound.
+                            No interpolation, uses nearest neighbor resampling. This gives a very bright and crunchy
+                            digital sound.
                         </td>
                     </tr>
                     <tr>
@@ -196,7 +196,7 @@
                     <tr>
                         <td>Mix</td>
                         <td>
-                            A mix between the harsh and smooth modes. Provides a compromise that has will make sloped
+                            A mix between the harsh and smooth modes. Provides a compromise that will make sloped
                             sections of the wave smoother, while preserving the clarity of the sharper portions at low
                             frequencies. This is the default option for any new waves, unless otherwise changed in
                             preferences.
