--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
                     <a href=""><img src="logo.png" alt="WaveTracker logo" /></a>
                 </header>
                 <iframe
-                    src="https://www.youtube.com/embed/d3P3TlGybx0?si=NrRVdd2Zw3YrN-QM"
+                    src="https://www.youtube.com/embed/aWQvBOXa0dU?version=3&vq=hd1080p60"
                     title="YouTube video player"
                     frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen
                 ></iframe>
                 <nav>
-                    <!-- <a class="button" href="https://squiggygames.itch.io/">Download on itch.io</a> -->
+                    <a class="button" href="https://squiggygames.itch.io/wavetracker">Download on itch.io</a>
                 </nav>
 
                 <article>
@@ -113,22 +113,35 @@
                         It was developed by
                         <a href="https://eliasananiadis.com">Elias Ananiadis</a> (@squiggythings) with the
                         <a href="https://monogame.net/">Monogame</a> and
-                        <a href="https://github.com/naudio/NAudio">N-Audio</a> C# libraries.
-                        <br />
-                        <br />
-                        I based it off of some of my favorite chiptune/music editing tools, most notably Famitracker and
-                        pxTone Collage. In a way, it combines the tracker and instrument editing interface of
+                        <a href="https://github.com/naudio/NAudio">NAudio</a> C# libraries.
+                    </p>
+                    <p>
+                        ~ I based it off of some of my favorite chiptune/music editing tools, most notably Famitracker
+                        and pxTone Collage. In a way, it combines the tracker and instrument editing interface of
                         Famitracker, with the audio and sample playback capabilities of pxTone, plus some extra bells
                         and whistles.
                         <br />
                         <br />
-                        <script type="text/javascript" src="https://storage.ko-fi.com/cdn/widget/Widget_2.js"></script>
-                        <script type="text/javascript">
-                            kofiwidget2.init("Support Me on Ko-fi", "#6eac28", "Y8Y1ZPW0M");
-                            kofiwidget2.draw();
-                        </script>
                     </p>
+                    <p>Special Thanks:</p>
+                    <ul>
+                        <li>
+                            Thanks to jsr for making Famitracker, and Pixel for making pxtone, providing the inspiration
+                            for this project.
+                        </li>
+                        <li>Thanks to the MonoGame Foundation, and Mark Heath for his NAudio .NET library.</li>
+                        <li>
+                            Thanks to the pxtone community discord server for their gracious support and testing
+                            contributions.
+                        </li>
+                        <li>Thanks to damifortune for providing a fantastic demo tune</li>
+                    </ul>
                 </article>
+                <script type="text/javascript" src="https://storage.ko-fi.com/cdn/widget/Widget_2.js"></script>
+                <script type="text/javascript">
+                    kofiwidget2.init("Support Me on Ko-fi", "#2f5753", "Y8Y1ZPW0M");
+                    kofiwidget2.draw();
+                </script>
             </div>
         </body>
     </html>
