--- a/404.html
+++ b/404.html
@@ -22,7 +22,9 @@
                     <p style="text-align: center; font-size: x-large">This page does not exist.</p>
 
                     <br />
-                    <p style="text-align: center; font-size: x-large"><a href="">[ Return home ]</a></p>
+                    <p style="text-align: center; font-size: x-large">
+                        <a href="https://wavetracker.org">[ Return home ]</a>
+                    </p>
                 </article>
             </div>
         </body>
