--- a/documentation/effect-list/index.html
+++ b/documentation/effect-list/index.html
@@ -292,8 +292,7 @@
                 <footer>
                     <hr />
                     WaveTracker is an open source music software by Elias Ananiadis &middot;
-                    <a href="https://github.com/squiggythings/WaveTracker">Source code</a> &middot;
-                    <a href="https://eliasananiadis.com">Personal site</a>
+                    <a href="https://github.com/squiggythings/WaveTracker">Source code</a>
                 </footer>
             </article>
         </body>
