--- a/documentation/toolbar/index.html
+++ b/documentation/toolbar/index.html
@@ -124,9 +124,8 @@
 
                 <footer>
                     <hr />
-                    WaveTracker is Copyright © 2024 Elias Ananiadis &middot;
-                    <a href="https://github.com/squiggythings/WaveTracker">Source code</a> &middot;
-                    <a href="https://eliasananiadis.com">Personal site</a>
+                    WaveTracker is Copyright © 2024 squiggythings &middot;
+                    <a href="https://github.com/squiggythings/WaveTracker">Source code</a>
                 </footer>
             </article>
         </body>
