--- a/documentation/pattern-editor/index.html
+++ b/documentation/pattern-editor/index.html
@@ -127,9 +127,8 @@
                 <p>See <a href="keyboard-shortcuts/">keyboard shortcuts</a> for additional keyboard commands.</p>
                 <footer>
                     <hr />
-                    WaveTracker is Copyright © 2024 Elias Ananiadis &middot;
-                    <a href="https://github.com/squiggythings/WaveTracker">Source code</a> &middot;
-                    <a href="https://eliasananiadis.com">Personal site</a>
+                    WaveTracker is Copyright © 2024 squiggythings &middot;
+                    <a href="https://github.com/squiggythings/WaveTracker">Source code</a>
                 </footer>
             </article>
         </body>
