Adds how to use wave section

--- a/documentation/wave-bank/index.html
+++ b/documentation/wave-bank/index.html
@@ -45,6 +45,20 @@
                 </p>
                 <p>In every new song, the first six will be filled in with presets by default.</p>
                 <br />
+                <h2>How to Use Waves in a Song</h2>
+                <p>
+                    To switch between waves in the pattern, use the <a href="effect-list/">Vxx effect</a> in a channel's
+                    effect column. For example, using V04 will switch the wave on that channel to wave #04 in the wave
+                    bank. By default, when the song starts, all channels use wave #00.
+                </p>
+                <p>
+                    For more advanced cases, <a href="instrument-editor/">Wave instruments</a> also have a 'Wave
+                    envelope' available on them, which will override the Vxx effect.<br />You can add a wave envelope on
+                    an instrument if you want that instrument to always use a certain wave, or use a sequence of waves
+                    over time.<br />If the instrument does not have a wave envelope, the channel will use whatever wave
+                    was set with the Vxx effect. This allows you to use the same instrument across different waves.
+                </p>
+                <br />
                 <h2 class="topic">Wave Editor</h2>
                 <p>A wave can be edited by clicking its slot in the wave bank, which will open the Wave Editor.</p>
                 <img
