--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                     <h1>WaveTracker</h1>
                     <p>
                         WaveTracker is a free and
-                        <a href="https://github.com/squiggythings/WaveTracker">open source</a> chiptune music-making
-                        software for Windows. It uses wavetable synthesis and sampling to generate sounds, with endless
-                        combinations of effects to warp, modify or distort waves and sounds.
+                        <a href="https://github.com/squiggythings/WaveTracker">open source</a> music-making software for
+                        Windows. It uses wavetable synthesis and sampling to generate sounds, with endless combinations
+                        of effects to warp, modify or distort waves and sounds.
                     </p>
                     <br />
                     <h2>Features</h2>
@@ -57,7 +57,7 @@
                                 title="Entering notes and effects in the pattern editor"
                                 alt="Animated image of a melody being typed into the pattern editor"
                             />
-                            <p>Use either the keyboard or a MIDI controller to quickly write chiptune music.</p>
+                            <p>Use either the keyboard or a MIDI controller to quickly write chiptune-esque music.</p>
                         </div>
                         <div class="image_wrapper">
                             <h3>Create Custom Instruments</h3>
