--- a/documentation/index.html
+++ b/documentation/index.html
@@ -35,8 +35,8 @@
                 <br />
                 <p>
                     This is the official documentation for
-                    <a href="../">WaveTracker</a>. WaveTracker is a tracker for making chiptune music, which can then be
-                    exported to .wav format.
+                    <a href="../">WaveTracker</a>. WaveTracker is a tracker for making chiptune-like music, which can
+                    then be exported to .wav format.
                 </p>
                 <img src="wave_tracker.png" title="WaveTracker's main screen" alt="WaveTracker's main screen" />
                 <h2>Features</h2>
