Adds Yxx effect

--- a/documentation/effect-list/index.html
+++ b/documentation/effect-list/index.html
@@ -287,6 +287,19 @@
                             lo-fi, bitcrushed sound
                         </td>
                     </tr>
+                    <tr>
+                        <td>
+                            <span class="fx">Y</span><span class="fxp">xx</span> - Start sample offset <br />
+                            <span class="parameterHint">(offset percentage)</span>
+                        </td>
+                        <td>
+                            Makes any samples start a percentage of the way through their lifetime.
+                            <span class="fxp">xx</span> is how far to start in. <br />For example:
+                            <span class="fx">Y</span><span class="fxp">25</span> will start the sample 25% of the way
+                            in. <span class="fx">Y</span><span class="fxp">50</span> will start the sample halfway
+                            through.<br />Use <span class="fx">Y</span><span class="fxp">00</span> to disable.<br />
+                        </td>
+                    </tr>
                 </table>
 
                 <footer>
