--- a/index.html
+++ b/index.html
@@ -107,6 +107,65 @@
                         For an in-depth explanation, view the <a href="./documentation/">official documentation</a>.
                     </p>
                     <br />
+                    <br />
+                    <h2 class="faq">Frequently Asked Questions (FAQ)</h2>
+
+                    <div>
+                        <div class="question">
+                            <h3>Will there be Linux and MacOS releases?</h3>
+
+                            <p>
+                                Right now WaveTracker is Windows only, but myself and other contributors are working as
+                                fast as possible to get WaveTracker to be cross-platform!
+                            </p>
+                        </div>
+                        <div class="question">
+                            <h3>What chips does this emulate?</h3>
+                            <p>
+                                Wavetracker does not emulate any hardware chips. It uses its own internal audio engine
+                                and samples to generate its sound.
+                            </p>
+                        </div>
+                        <div class="question">
+                            <h3>Help! I can't place down any notes!</h3>
+                            <p>
+                                Make sure you are in editing mode by either pressing space or clicking the red record
+                                button in the toolbar.
+                            </p>
+                        </div>
+                        <div class="question">
+                            <h3>I made some waves, but how do I use them in the song?</h3>
+                            <p>
+                                The Vxx effect will tell a channel which wave from the bank to use. Alternatively, wave
+                                instruments have a 'Wave Envelope' if you want to automate a sequence of waves over
+                                time.
+                            </p>
+                            <p>
+                                See the <a href="/documentation/wave-bank/">wave bank documentation</a> for more
+                                details.
+                            </p>
+                        </div>
+                        <div class="question">
+                            <h3>How do I assign a wave to a wave instrument?</h3>
+                            <p>
+                                If you want an instrument to always use a specific wave or sequence of waves, you can
+                                create a 'Wave' envelope to automate what waves the instrument will use while playing.
+                            </p>
+                            <p>
+                                See the <a href="/documentation/wave-bank/">wave bank documentation</a> for more
+                                details.
+                            </p>
+                        </div>
+                        <div class="question">
+                            <h3>Is there a list of all the effects somewhere?</h3>
+                            <p>
+                                Yes! See the <a href="/documentation/effect-list/">effects list</a> for a list of all
+                                the effects and what they do.
+                            </p>
+                        </div>
+                    </div>
+                    <br />
+                    <br />
                     <h2>About</h2>
                     <p>
                         WaveTracker started out as a university project and quickly grew into a full tracking software.
