Fix effect list typo

--- a/documentation/effect-list/index.html
+++ b/documentation/effect-list/index.html
@@ -177,7 +177,7 @@
                             <span class="fx">F</span><span class="fxp">xx</span> - Tempo change<br />
                             <span class="parameterHint">(ticks/frame)</span>
                         </td>
-                        <td>Overrides the initial song speed with <span class="fxp">xx</span> ticks per frame.</td>
+                        <td>Overrides the initial song speed with <span class="fxp">xx</span> ticks per row.</td>
                     </tr>
                     <tr>
                         <td>
