--- a/documentation/effect-list/index.html
+++ b/documentation/effect-list/index.html
@@ -304,7 +304,7 @@
 
                 <footer>
                     <hr />
-                    WaveTracker is an open source music software by Elias Ananiadis &middot;
+                    WaveTracker is an open source music software by Elias Ananiadis / squiggythings &middot;
                     <a href="https://github.com/squiggythings/WaveTracker">Source code</a>
                 </footer>
             </article>
