--- a/documentation/instrument-editor/index.html
+++ b/documentation/instrument-editor/index.html
@@ -309,7 +309,7 @@
 
                 <footer>
                     <hr />
-                    WaveTracker is Copyright © 2024 squiggythings &middot;
+                    WaveTracker is an open source music software by Elias Ananiadis / squiggythings &middot;
                     <a href="https://github.com/squiggythings/WaveTracker">Source code</a>
                 </footer>
             </article>
