--- a/documentation/keyboard-shortcuts/index.html
+++ b/documentation/keyboard-shortcuts/index.html
@@ -401,7 +401,7 @@
                 <br />
                 <footer>
                     <hr />
-                    WaveTracker is Copyright © 2024 squiggythings &middot;
+                    WaveTracker is an open source music software by Elias Ananiadis / squiggythings &middot;
                     <a href="https://github.com/squiggythings/WaveTracker">Source code</a>
                 </footer>
             </article>
