--- a/documentation/pattern-editor/index.html
+++ b/documentation/pattern-editor/index.html
@@ -127,7 +127,7 @@
                 <p>See <a href="keyboard-shortcuts/">keyboard shortcuts</a> for additional keyboard commands.</p>
                 <footer>
                     <hr />
-                    WaveTracker is Copyright © 2024 squiggythings &middot;
+                    WaveTracker is an open source music software by Elias Ananiadis / squiggythings &middot;
                     <a href="https://github.com/squiggythings/WaveTracker">Source code</a>
                 </footer>
             </article>
